# practic-FastAPI-authentification

./: .gitignore  main.py  pyproject.toml
authentification_in_FastAPI/: pyproject.toml
authentification_in_FastAPI/src/route_api/: views.py
