[project]
name = "authentification_in_fastapi"
version = "0.1.0"
description = ""
authors = [
    {name = "Vitaly Zakharov",email = "zaharof1995@yandex.ru"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.116.1,<0.117.0)"
]

[tool.poetry]
packages = [{include = "authentification_in_fastapi"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
